# KingsServerLauncher

./: .gitignore  LICENSE  README.md  build_launcher  build_launcher.ps1  launcher_entry.py  pom.xml  pyproject.toml
.github/workflows/: build-multiplatform.yml
mcserverlib/: __init__.py  build.py  catalog.py  cli.py  exceptions.py  gui_launcher.py  http.py  manager.py  minecraft.py  models.py  process.py  subprocess_utils.py  utils.py
mcserverlib/providers/: __init__.py  base.py  fabric.py  forge.py  neoforge.py  paper_family.py  purpur.py  quilt.py  vanilla.py
src/main/java/com/battlepass/plugin/: BattlePassPlugin.java
src/main/java/com/battlepass/plugin/command/: BattlePassCommand.java
src/main/java/com/battlepass/plugin/config/: ConfigManager.java
src/main/java/com/battlepass/plugin/data/: PlayerData.java  PlayerDataStore.java
src/main/java/com/battlepass/plugin/gui/: BattlePassGui.java  BattlePassHolder.java
src/main/java/com/battlepass/plugin/listener/: PlayerConnectionListener.java  ProgressionListener.java
src/main/java/com/battlepass/plugin/model/: RewardTrack.java  Tier.java
src/main/java/com/battlepass/plugin/service/: BattlePassService.java  ClaimResult.java  MessageService.java
src/main/java/com/battlepass/plugin/util/: ColorUtil.java  ItemUtil.java  PlaceholderUtil.java
src/main/resources/: config.yml  messages.yml  plugin.yml
tests/: test_catalog.py  test_http.py  test_manager.py  test_utils.py  test_version_resolution.py
