[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcserverlib"
version = "0.1.0"
description = "Python library and CLI for installing and running Minecraft servers across loaders."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "mcserverlib contributors" }]
keywords = ["minecraft", "server", "paper", "fabric", "forge", "neoforge", "quilt", "purpur"]
classifiers = [
  "License :: Other/Proprietary License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Games/Entertainment",
  "Topic :: System :: Systems Administration",
]
dependencies = ["certifi>=2024.0.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]
build = ["pyinstaller>=6.11.0", "pillow>=10.0.0"]

[project.scripts]
mcserver = "mcserverlib.cli:main"
mcserver-gui = "mcserverlib.gui_launcher:main"
mcserver-build = "mcserverlib.build:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["mcserverlib*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
